force-app/main/default/objects/Employee__c/fields/Employee_last_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_last_Name__c</fullName>
    <label>Employee last Name</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>