force-app/main/default/objects/Employee__c/fields/Epmloyee_ID__c.field-meta.xml
<CustomField>
    <fullName>Epmloyee_ID__c</fullName>
    <label>Epmloyee ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>