force-app/main/default/objects/Employee__c/recordTypes/Employee1.recordType-meta.xml
<RecordType>
    <fullName>Employee1</fullName>
    <active>true</active>
    <label>Employee1</label>
</RecordType>