force-app/main/default/objects/Employee__c/validationRules/Check_Mobile_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Mobile_No__c)),
    LEN(Mobile_No__c) &lt; 10
)</errorConditionFormula>
    <errorDisplayField>Mobile_No__c</errorDisplayField>
    <errorMessage>Mobile no should be 10 digits</errorMessage>
</ValidationRule>