force-app/main/default/objects/Employee__c/validationRules/Non_Editable_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Editable_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Date_Of_Birth__c )</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>Date Of Birth can not be changed</errorMessage>
</ValidationRule>