force-app/main/default/objects/Employee__c/listViews/New_Queue_Employee.listView-meta.xml
<ListView>
    <fullName>New_Queue_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>New Queue</label>
    <queue>New_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>